@@ -1,3 +1,5 @@
+- Refactor: Removed deprecated relation between PrecedentDegreeInformation and Registration
+
 28.2.0 (04-03-2020)
 - Refactor: Removed deprecated relation between PrecedentDegreeInformation and PersonalIngressionData
 
